# msc_file_explorer

./: CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  Makefile
app/: CMakeLists.txt  main.c
fatfs/: CMakeLists.txt  ff.h  ffconf.h
file_processing/: CMakeLists.txt  file_processing.c  file_processing.h
hardware_processing/: CMakeLists.txt  Readme.txt  clocked_input.pio  hardware_processing.c  hardware_processing.h  queue.c  queue.h  spi_processing.c
tusb_config/: tusb_config.h
tusb_src/: CMakeLists.txt  msc_app.c
